# triton-build

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-debug.yml  cmake-relwithdebinfo.yml
